k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: optiinfra
  labels:
    name: optiinfra
    app.kubernetes.io/name: optiinfra
